--- a/textblock1.html
+++ b/textblock1.html
@@ -9,32 +9,32 @@ IF (NOT Empty(@sfOrgId) AND NOT Empty(@journeyId)) THEN
   Set @personalizeId = Concat(@objectId,_emailId,"1756384692503")
 ENDIF
 
-/* Default HTML (normalize link weight) */
+/* Default HTML (keep Arial 10.5pt; add font-weight:normal only on link text) */
 SET @defaultDCP = ''
-SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/arizona/scottsdale/" style="text-decoration:none"><span class="Hyperlink" style="font-weight:normal">Embark at Scottsdale, AZ</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
-SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/california/campbell/" style="text-decoration:none"><span class="Hyperlink" style="font-weight:normal">Embark at Campbell, CA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
-SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/california/newport-beach/" style="text-decoration:none"><span class="Hyperlink" style="font-weight:normal">Embark at Newport Beach, CA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
-SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/california/walnut-creek/" style="text-decoration:none"><span class="Hyperlink" style="font-weight:normal">Embark at Walnut Creek, CA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
-SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/colorado/greenwood-village/" style="text-decoration:none"><span class="Hyperlink" style="font-weight:normal">Embark at Greenwood Village, CO</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
-SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/georgia/alpharetta/" style="text-decoration:none"><span class="Hyperlink" style="font-weight:normal">Embark at Alpharetta, GA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
-SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/georgia/atlanta/" style="text-decoration:none"><span class="Hyperlink" style="font-weight:normal">Embark at Atlanta, GA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 9-28): No waitlist</span></p>')
-SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/maryland/chevy-chase/" style="text-decoration:none"><span class="Hyperlink" style="font-weight:normal">Embark at Chevy Chase, MD</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
-SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/maryland/rockville/" style="text-decoration:none"><span class="Hyperlink" style="font-weight:normal">Embark at Rockville, MD</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
-SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/pennsylvania/berwyn/" style="text-decoration:none"><span class="Hyperlink" style="font-weight:normal">Embark at Berwyn, PA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-18): No waitlist</span></p>')
-SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/maryland/ashburn/" style="text-decoration:none"><span class="Hyperlink" style="font-weight:normal">Embark at Ashburn, VA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
-SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/virginia/vienna/" style="text-decoration:none"><span class="Hyperlink" style="font-weight:normal">Embark at Vienna, VA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-17): No waitlist</span></p>')
+SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/arizona/scottsdale/" style="text-decoration:none"><span class="Hyperlink" style="font-family:Arial; font-size:10.5pt; font-weight:normal">Embark at Scottsdale, AZ</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
+SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/california/campbell/" style="text-decoration:none"><span class="Hyperlink" style="font-family:Arial; font-size:10.5pt; font-weight:normal">Embark at Campbell, CA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
+SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/california/newport-beach/" style="text-decoration:none"><span class="Hyperlink" style="font-family:Arial; font-size:10.5pt; font-weight:normal">Embark at Newport Beach, CA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
+SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/california/walnut-creek/" style="text-decoration:none"><span class="Hyperlink" style="font-family:Arial; font-size:10.5pt; font-weight:normal">Embark at Walnut Creek, CA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
+SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/colorado/greenwood-village/" style="text-decoration:none"><span class="Hyperlink" style="font-family:Arial; font-size:10.5pt; font-weight:normal">Embark at Greenwood Village, CO</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
+SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/georgia/alpharetta/" style="text-decoration:none"><span class="Hyperlink" style="font-family:Arial; font-size:10.5pt; font-weight:normal">Embark at Alpharetta, GA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
+SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/georgia/atlanta/" style="text-decoration:none"><span class="Hyperlink" style="font-family:Arial; font-size:10.5pt; font-weight:normal">Embark at Atlanta, GA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 9-28): No waitlist</span></p>')
+SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/maryland/chevy-chase/" style="text-decoration:none"><span class="Hyperlink" style="font-family:Arial; font-size:10.5pt; font-weight:normal">Embark at Chevy Chase, MD</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
+SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/maryland/rockville/" style="text-decoration:none"><span class="Hyperlink" style="font-family:Arial; font-size:10.5pt; font-weight:normal">Embark at Rockville, MD</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
+SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/pennsylvania/berwyn/" style="text-decoration:none"><span class="Hyperlink" style="font-family:Arial; font-size:10.5pt; font-weight:normal">Embark at Berwyn, PA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-18): No waitlist</span></p>')
+SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/maryland/ashburn/" style="text-decoration:none"><span class="Hyperlink" style="font-family:Arial; font-size:10.5pt; font-weight:normal">Embark at Ashburn, VA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-28): No waitlist</span></p>')
+SET @defaultDCP = Concat(@defaultDCP, '<p style="line-height:150%"><a href="https://www.embarkbh.com/locations/virginia/vienna/" style="text-decoration:none"><span class="Hyperlink" style="font-family:Arial; font-size:10.5pt; font-weight:normal">Embark at Vienna, VA</span></a><span style="font-family:Arial; font-size:10.5pt"> (All genders ages 12-17): No waitlist</span></p>')
 
-/* Read any saved value */
+/* Load any saved value */
 IF NOT Empty(@personalizeDE) THEN
   Set @saved = Lookup(@personalizeDE,"value","id",@personalizeId)
 ELSE
   Set @saved = ""
 ENDIF
 
-/* Persist CRM edits and choose final HTML */
+/* Persist CRM edit and choose output */
 IF NOT EMPTY(@richText) THEN
   IF NOT Empty(@personalizeDE) THEN
-    UpsertDE(@personalizeDE, 1, "id", @personalizeId, "value", @richText) /* save CRM edit */
+    UpsertDE(@personalizeDE, 1, "id", @personalizeId, "value", @richText)
   ENDIF
   Set @richTextMsg = @richText
 ELSEIF NOT EMPTY(@saved) THEN
@@ -43,7 +43,6 @@ ELSE
   Set @richTextMsg = @defaultDCP
 ENDIF
 
-/* IMPORTANT: do not append default after rendering */
 Set @richTextMsg = Concat('<div class="dm-rich-text-block" data-dm-block-id="1756384692503">', @richTextMsg, '</div>')
 ]%%
 %%=v(@richTextMsg)=%%
